compiler/oberonParser.cpp

// Generated from oberon.g4 by ANTLR 4.13.1


#include "oberonListener.h"
#include "oberonVisitor.h"

#include "oberonParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OberonParserStaticData final {
  OberonParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OberonParserStaticData(const OberonParserStaticData&) = delete;
  OberonParserStaticData(OberonParserStaticData&&) = delete;
  OberonParserStaticData& operator=(const OberonParserStaticData&) = delete;
  OberonParserStaticData& operator=(OberonParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag oberonParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
OberonParserStaticData *oberonParserStaticData = nullptr;

void oberonParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (oberonParserStaticData != nullptr) {
    return;
  }
#else
  assert(oberonParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<OberonParserStaticData>(
    std::vector<std::string>{
      "ident", "qualident", "identdef", "integer", "real", "number", "constDeclaration", 
      "constExpression", "typeDeclaration", "type_", "arrayType", "length", 
      "identList", "variableDeclaration", "expression", "relation", "simpleExpression", 
      "addOperator", "term", "mulOperator", "factor", "designator", "selector", 
      "set_", "element", "expList", "actualParameters", "statement", "assignment", 
      "statementSequence", "ifStatement", "whileStatement", "forStatement", 
      "declarationSequence", "module"
    },
    std::vector<std::string>{
      "", "'*'", "'.'", "'='", "','", "':'", "'#'", "'<'", "'<='", "'>'", 
      "'>='", "'+'", "'-'", "'/'", "'&'", "'('", "')'", "'~'", "'['", "']'", 
      "'{'", "'}'", "'..'", "':='", "';'", "'ARRAY'", "'OF'", "'END'", "'TO'", 
      "'OR'", "'DIV'", "'MOD'", "'NIL'", "'TRUE'", "'FALSE'", "'IF'", "'THEN'", 
      "'ELSIF'", "'ELSE'", "'CASE'", "'WHILE'", "'DO'", "'FOR'", "'BY'", 
      "'BEGIN'", "'RETURN'", "'CONST'", "'TYPE'", "'VAR'", "'MODULE'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "ARRAY", "OF", "END", "TO", "OR", 
      "DIV", "MOD", "NIL", "TRUE", "FALSE", "IF", "THEN", "ELSIF", "ELSE", 
      "CASE", "WHILE", "DO", "FOR", "BY", "BEGIN", "RETURN", "CONST", "TYPE", 
      "VAR", "MODULE", "STRING", "IDENT", "LETTER", "DIGIT", "COMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  oberonParserStaticData = staticData.release();
}

}

oberonParser::oberonParser(TokenStream *input) : oberonParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

oberonParser::oberonParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  oberonParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *oberonParserStaticData->atn, oberonParserStaticData->decisionToDFA, oberonParserStaticData->sharedContextCache, options);
}

oberonParser::~oberonParser() {
  delete _interpreter;
}

const atn::ATN& oberonParser::getATN() const {
  return *oberonParserStaticData->atn;
}

std::string oberonParser::getGrammarFileName() const {
  return "oberon.g4";
}

const std::vector<std::string>& oberonParser::getRuleNames() const {
  return oberonParserStaticData->ruleNames;
}

const dfa::Vocabulary& oberonParser::getVocabulary() const {
  return oberonParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView oberonParser::getSerializedATN() const {
  return oberonParserStaticData->serializedATN;
}


//----------------- IdentContext ------------------------------------------------------------------

oberonParser::IdentContext::IdentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* oberonParser::IdentContext::IDENT() {
  return getToken(oberonParser::IDENT, 0);
}


size_t oberonParser::IdentContext::getRuleIndex() const {
  return oberonParser::RuleIdent;
}

void oberonParser::IdentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdent(this);
}

void oberonParser::IdentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdent(this);
}


std::any oberonParser::IdentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitIdent(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::IdentContext* oberonParser::ident() {
  IdentContext *_localctx = _tracker.createInstance<IdentContext>(_ctx, getState());
  enterRule(_localctx, 0, oberonParser::RuleIdent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(oberonParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualidentContext ------------------------------------------------------------------

oberonParser::QualidentContext::QualidentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::IdentContext* oberonParser::QualidentContext::ident() {
  return getRuleContext<oberonParser::IdentContext>(0);
}


size_t oberonParser::QualidentContext::getRuleIndex() const {
  return oberonParser::RuleQualident;
}

void oberonParser::QualidentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualident(this);
}

void oberonParser::QualidentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualident(this);
}


std::any oberonParser::QualidentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitQualident(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::QualidentContext* oberonParser::qualident() {
  QualidentContext *_localctx = _tracker.createInstance<QualidentContext>(_ctx, getState());
  enterRule(_localctx, 2, oberonParser::RuleQualident);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    ident();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentdefContext ------------------------------------------------------------------

oberonParser::IdentdefContext::IdentdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::IdentContext* oberonParser::IdentdefContext::ident() {
  return getRuleContext<oberonParser::IdentContext>(0);
}


size_t oberonParser::IdentdefContext::getRuleIndex() const {
  return oberonParser::RuleIdentdef;
}

void oberonParser::IdentdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentdef(this);
}

void oberonParser::IdentdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentdef(this);
}


std::any oberonParser::IdentdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitIdentdef(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::IdentdefContext* oberonParser::identdef() {
  IdentdefContext *_localctx = _tracker.createInstance<IdentdefContext>(_ctx, getState());
  enterRule(_localctx, 4, oberonParser::RuleIdentdef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    ident();
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == oberonParser::T__0) {
      setState(75);
      match(oberonParser::T__0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntegerContext ------------------------------------------------------------------

oberonParser::IntegerContext::IntegerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> oberonParser::IntegerContext::DIGIT() {
  return getTokens(oberonParser::DIGIT);
}

tree::TerminalNode* oberonParser::IntegerContext::DIGIT(size_t i) {
  return getToken(oberonParser::DIGIT, i);
}


size_t oberonParser::IntegerContext::getRuleIndex() const {
  return oberonParser::RuleInteger;
}

void oberonParser::IntegerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInteger(this);
}

void oberonParser::IntegerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInteger(this);
}


std::any oberonParser::IntegerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitInteger(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::IntegerContext* oberonParser::integer() {
  IntegerContext *_localctx = _tracker.createInstance<IntegerContext>(_ctx, getState());
  enterRule(_localctx, 6, oberonParser::RuleInteger);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(78);
      match(oberonParser::DIGIT);
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == oberonParser::DIGIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RealContext ------------------------------------------------------------------

oberonParser::RealContext::RealContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> oberonParser::RealContext::DIGIT() {
  return getTokens(oberonParser::DIGIT);
}

tree::TerminalNode* oberonParser::RealContext::DIGIT(size_t i) {
  return getToken(oberonParser::DIGIT, i);
}


size_t oberonParser::RealContext::getRuleIndex() const {
  return oberonParser::RuleReal;
}

void oberonParser::RealContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReal(this);
}

void oberonParser::RealContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReal(this);
}


std::any oberonParser::RealContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitReal(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::RealContext* oberonParser::real() {
  RealContext *_localctx = _tracker.createInstance<RealContext>(_ctx, getState());
  enterRule(_localctx, 8, oberonParser::RuleReal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(83);
      match(oberonParser::DIGIT);
      setState(86); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == oberonParser::DIGIT);
    setState(88);
    match(oberonParser::T__1);
    setState(92);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == oberonParser::DIGIT) {
      setState(89);
      match(oberonParser::DIGIT);
      setState(94);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

oberonParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::IntegerContext* oberonParser::NumberContext::integer() {
  return getRuleContext<oberonParser::IntegerContext>(0);
}

oberonParser::RealContext* oberonParser::NumberContext::real() {
  return getRuleContext<oberonParser::RealContext>(0);
}


size_t oberonParser::NumberContext::getRuleIndex() const {
  return oberonParser::RuleNumber;
}

void oberonParser::NumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumber(this);
}

void oberonParser::NumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumber(this);
}


std::any oberonParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::NumberContext* oberonParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 10, oberonParser::RuleNumber);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      integer();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(96);
      real();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclarationContext ------------------------------------------------------------------

oberonParser::ConstDeclarationContext::ConstDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::IdentdefContext* oberonParser::ConstDeclarationContext::identdef() {
  return getRuleContext<oberonParser::IdentdefContext>(0);
}

oberonParser::ConstExpressionContext* oberonParser::ConstDeclarationContext::constExpression() {
  return getRuleContext<oberonParser::ConstExpressionContext>(0);
}


size_t oberonParser::ConstDeclarationContext::getRuleIndex() const {
  return oberonParser::RuleConstDeclaration;
}

void oberonParser::ConstDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDeclaration(this);
}

void oberonParser::ConstDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDeclaration(this);
}


std::any oberonParser::ConstDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitConstDeclaration(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::ConstDeclarationContext* oberonParser::constDeclaration() {
  ConstDeclarationContext *_localctx = _tracker.createInstance<ConstDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, oberonParser::RuleConstDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    identdef();
    setState(100);
    match(oberonParser::T__2);
    setState(101);
    constExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstExpressionContext ------------------------------------------------------------------

oberonParser::ConstExpressionContext::ConstExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::ExpressionContext* oberonParser::ConstExpressionContext::expression() {
  return getRuleContext<oberonParser::ExpressionContext>(0);
}


size_t oberonParser::ConstExpressionContext::getRuleIndex() const {
  return oberonParser::RuleConstExpression;
}

void oberonParser::ConstExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstExpression(this);
}

void oberonParser::ConstExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstExpression(this);
}


std::any oberonParser::ConstExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitConstExpression(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::ConstExpressionContext* oberonParser::constExpression() {
  ConstExpressionContext *_localctx = _tracker.createInstance<ConstExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, oberonParser::RuleConstExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationContext ------------------------------------------------------------------

oberonParser::TypeDeclarationContext::TypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::IdentdefContext* oberonParser::TypeDeclarationContext::identdef() {
  return getRuleContext<oberonParser::IdentdefContext>(0);
}

oberonParser::Type_Context* oberonParser::TypeDeclarationContext::type_() {
  return getRuleContext<oberonParser::Type_Context>(0);
}


size_t oberonParser::TypeDeclarationContext::getRuleIndex() const {
  return oberonParser::RuleTypeDeclaration;
}

void oberonParser::TypeDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDeclaration(this);
}

void oberonParser::TypeDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDeclaration(this);
}


std::any oberonParser::TypeDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitTypeDeclaration(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::TypeDeclarationContext* oberonParser::typeDeclaration() {
  TypeDeclarationContext *_localctx = _tracker.createInstance<TypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, oberonParser::RuleTypeDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    identdef();
    setState(106);
    match(oberonParser::T__2);
    setState(107);
    type_();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_Context ------------------------------------------------------------------

oberonParser::Type_Context::Type_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::QualidentContext* oberonParser::Type_Context::qualident() {
  return getRuleContext<oberonParser::QualidentContext>(0);
}

oberonParser::ArrayTypeContext* oberonParser::Type_Context::arrayType() {
  return getRuleContext<oberonParser::ArrayTypeContext>(0);
}


size_t oberonParser::Type_Context::getRuleIndex() const {
  return oberonParser::RuleType_;
}

void oberonParser::Type_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType_(this);
}

void oberonParser::Type_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType_(this);
}


std::any oberonParser::Type_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitType_(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::Type_Context* oberonParser::type_() {
  Type_Context *_localctx = _tracker.createInstance<Type_Context>(_ctx, getState());
  enterRule(_localctx, 18, oberonParser::RuleType_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oberonParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(109);
        qualident();
        break;
      }

      case oberonParser::ARRAY: {
        enterOuterAlt(_localctx, 2);
        setState(110);
        arrayType();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayTypeContext ------------------------------------------------------------------

oberonParser::ArrayTypeContext::ArrayTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* oberonParser::ArrayTypeContext::ARRAY() {
  return getToken(oberonParser::ARRAY, 0);
}

oberonParser::LengthContext* oberonParser::ArrayTypeContext::length() {
  return getRuleContext<oberonParser::LengthContext>(0);
}

tree::TerminalNode* oberonParser::ArrayTypeContext::OF() {
  return getToken(oberonParser::OF, 0);
}

oberonParser::Type_Context* oberonParser::ArrayTypeContext::type_() {
  return getRuleContext<oberonParser::Type_Context>(0);
}


size_t oberonParser::ArrayTypeContext::getRuleIndex() const {
  return oberonParser::RuleArrayType;
}

void oberonParser::ArrayTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayType(this);
}

void oberonParser::ArrayTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayType(this);
}


std::any oberonParser::ArrayTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitArrayType(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::ArrayTypeContext* oberonParser::arrayType() {
  ArrayTypeContext *_localctx = _tracker.createInstance<ArrayTypeContext>(_ctx, getState());
  enterRule(_localctx, 20, oberonParser::RuleArrayType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(oberonParser::ARRAY);
    setState(114);
    length();
    setState(115);
    match(oberonParser::OF);
    setState(116);
    type_();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthContext ------------------------------------------------------------------

oberonParser::LengthContext::LengthContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oberonParser::ConstExpressionContext* oberonParser::LengthContext::constExpression() {
  return getRuleContext<oberonParser::ConstExpressionContext>(0);
}


size_t oberonParser::LengthContext::getRuleIndex() const {
  return oberonParser::RuleLength;
}

void oberonParser::LengthContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLength(this);
}

void oberonParser::LengthContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<oberonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLength(this);
}


std::any oberonParser::LengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oberonVisitor*>(visitor))
    return parserVisitor->visitLength(this);
  else
    return visitor->visitChildren(this);
}

oberonParser::LengthContext* oberonParser::length() {
  LengthContext *_localctx = _tracker.createInstance<LengthContext>(_ctx, getState());
  enterRule(_localctx, 22, oberonParser::RuleLength);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    constExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentListContext ------------------------------------------------------------------

oberonParser::IdentListContext::IdentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<oberonParser::IdentdefContext *> oberonParser::IdentListContext::identdef() {
  return getRuleContexts<oberonParser::IdentdefContext>();
}
